--- a/hui/style/style.css
+++ b/hui/style/style.css
@@ -518,13 +518,12 @@ a {
 
 .colour-main {
   height: 100vh;
-  overflow-y: auto;
   display: -ms-grid;
   display: grid;
   -ms-grid-columns: 1fr 1fr 1fr;
       grid-template-columns: 1fr 1fr 1fr;
-  -ms-grid-rows: 0.2fr 1fr 0.1fr 1fr;
-      grid-template-rows: 0.2fr 1fr 0.1fr 1fr;
+  -ms-grid-rows: 0.2fr 0.3fr 0.1fr 0.8fr;
+      grid-template-rows: 0.2fr 0.3fr 0.1fr 0.8fr;
       grid-template-areas: ". .  ." ". b1 ." ". .  ." "b2 b2 b2";
 }
 
@@ -700,6 +699,24 @@ a {
   color: #312768;
 }
 
+.colour-a11y {
+  height: 100vh;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 1fr 1fr 1fr;
+      grid-template-columns: 1fr 1fr 1fr;
+  -ms-grid-rows: 0.2fr 1fr 1fr 1fr;
+      grid-template-rows: 0.2fr 1fr 1fr 1fr;
+      grid-template-areas: "h h ." ". . ." ". . ." "b2 b2 b2";
+}
+
+.colour-a11y .heading {
+  -ms-grid-row: 1;
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 2;
+  grid-area: h;
+}
+
 @media (hover) {
   .ratio {
     background-size: 100% 0%,100% 0%,100% 0%;
@@ -715,15 +732,13 @@ a {
   }
 }
 
-@media screen and (max-width: 720px) {
+@media screen and (max-width: 940px) {
   .colour-main {
-    -ms-grid-rows: 0.4fr 0.4fr 0.1fr 1fr;
-        grid-template-rows: 0.4fr 0.4fr 0.1fr 1fr;
+    height: 100%;
+    -ms-grid-rows: 0.2fr 0.2fr 0.1fr 0.9fr;
+        grid-template-rows: 0.2fr 0.2fr 0.1fr 0.9fr;
         grid-template-areas: "b1 b1 b1"  "b1 b1 b1"  "b2 b2 b2"  "b2 b2 b2";
   }
-}
-
-@media screen and (max-width: 940px) {
   .cards {
     display: block;
     margin: 25px auto;
